[gd_scene format=3 uid="uid://bxgaukydlyquy"]

[ext_resource type="Script" uid="uid://df2eanstdaeac" path="res://scenes/ui/main_menu_control.gd" id="1_y4ab8"]
[ext_resource type="Texture2D" uid="uid://cwh7ntoq3vs7v" path="res://assets/UI/logo.png" id="2_dq3hq"]
[ext_resource type="Texture2D" uid="uid://drgb0j03hk0oa" path="res://assets/UI/buttons/ui_buttons_idle.png" id="3_5p2fk"]
[ext_resource type="PackedScene" uid="uid://b45ggpuo61beu" path="res://scenes/ui/settings_menu.tscn" id="3_xng62"]
[ext_resource type="Texture2D" uid="uid://grafoxwbhg1q" path="res://assets/UI/buttons/ui_buttons_click.png" id="4_4i2io"]
[ext_resource type="Texture2D" uid="uid://ww7jde3alxw" path="res://assets/UI/buttons/ui_buttons_hover.png" id="5_lodai"]
[ext_resource type="FontFile" uid="uid://bcr6dsok2dav8" path="res://assets/fonts/Lequire.otf" id="6_qdrcn"]

[sub_resource type="Gradient" id="Gradient_y4ab8"]
offsets = PackedFloat32Array(0, 0.38701922, 0.6995192, 1)
colors = PackedColorArray(0.21568628, 0.6666667, 0.88235295, 1, 0.85, 0.85, 0.85, 1, 0.85, 0.85, 0.85, 1, 0.21568628, 0.6666667, 0.88235295, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xng62"]
gradient = SubResource("Gradient_y4ab8")

[node name="MainManu" type="Node" unique_id=65238869]

[node name="MainMenuControl" type="Control" parent="." unique_id=222478533]
layout_mode = 3
anchor_right = 1.5000001
anchor_bottom = 1.5000001
offset_right = -0.00012207031
offset_bottom = -0.00012207031
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4ab8")

[node name="BackgroundImage" type="TextureRect" parent="MainMenuControl" unique_id=68582388]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_xng62")

[node name="Logo" type="TextureRect" parent="MainMenuControl" unique_id=1302387483]
layout_mode = 0
offset_left = 583.0
offset_top = -56.0
offset_right = 1425.0
offset_bottom = 540.0
texture = ExtResource("2_dq3hq")

[node name="StartGameButton" type="TextureButton" parent="MainMenuControl" unique_id=59346623]
layout_mode = 0
offset_left = 744.0
offset_top = 485.0
offset_right = 1244.0
offset_bottom = 635.0
texture_normal = ExtResource("3_5p2fk")
texture_pressed = ExtResource("4_4i2io")
texture_hover = ExtResource("5_lodai")
ignore_texture_size = true
stretch_mode = 5

[node name="StartGameLabel" type="Label" parent="MainMenuControl/StartGameButton" unique_id=1998554624]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -6.0
offset_right = -48.0
offset_bottom = -29.00003
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1764706, 0.6666667, 0.88235295, 1)
theme_override_fonts/font = ExtResource("6_qdrcn")
theme_override_font_sizes/font_size = 50
text = "start.exe"
vertical_alignment = 2

[node name="SettingsButton" type="TextureButton" parent="MainMenuControl" unique_id=625583442]
layout_mode = 0
offset_left = 744.0
offset_top = 656.0
offset_right = 1244.0
offset_bottom = 806.0
texture_normal = ExtResource("3_5p2fk")
texture_pressed = ExtResource("4_4i2io")
texture_hover = ExtResource("5_lodai")
ignore_texture_size = true
stretch_mode = 5

[node name="StartGameLabel" type="Label" parent="MainMenuControl/SettingsButton" unique_id=1655521754]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -6.0
offset_right = -48.0
offset_bottom = -29.00003
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1764706, 0.6666667, 0.88235295, 1)
theme_override_fonts/font = ExtResource("6_qdrcn")
theme_override_font_sizes/font_size = 50
text = "settings.exe"
vertical_alignment = 2

[node name="ExitButton" type="TextureButton" parent="MainMenuControl" unique_id=934810130]
layout_mode = 0
offset_left = 744.0
offset_top = 832.0
offset_right = 1244.0
offset_bottom = 982.0
texture_normal = ExtResource("3_5p2fk")
texture_pressed = ExtResource("4_4i2io")
texture_hover = ExtResource("5_lodai")
ignore_texture_size = true
stretch_mode = 5

[node name="StartGameLabel" type="Label" parent="MainMenuControl/ExitButton" unique_id=901351276]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = -6.0
offset_right = -48.0
offset_bottom = -29.00003
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.1764706, 0.6666667, 0.88235295, 1)
theme_override_fonts/font = ExtResource("6_qdrcn")
theme_override_font_sizes/font_size = 50
text = "alt+f4"
vertical_alignment = 2

[node name="SettingsMenu" parent="." unique_id=1457986091 instance=ExtResource("3_xng62")]
visible = false
offset_left = 386.0
offset_top = 9.0
offset_right = 386.0
offset_bottom = 9.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="MainMenuControl/StartGameButton" to="MainMenuControl" method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MainMenuControl/SettingsButton" to="MainMenuControl" method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenuControl/ExitButton" to="MainMenuControl" method="_on_exit_button_pressed"]
[connection signal="isClosed" from="SettingsMenu" to="MainMenuControl" method="_on_settings_menu_is_closed"]
